ConcurrentHashMap 添加注释