@@ -42,6 +42,7 @@ import java.lang.reflect.Type;
 import java.util.AbstractMap;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Comparator;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.Hashtable;
@@ -50,17 +51,19 @@ import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.Set;
 import java.util.Spliterator;
+import java.util.concurrent.ConcurrentMap;
+import java.util.concurrent.ForkJoinPool;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.concurrent.locks.LockSupport;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.BiConsumer;
 import java.util.function.BiFunction;
+import java.util.function.BinaryOperator;
 import java.util.function.Consumer;
 import java.util.function.DoubleBinaryOperator;
 import java.util.function.Function;
 import java.util.function.IntBinaryOperator;
 import java.util.function.LongBinaryOperator;
-import java.util.function.Predicate;
 import java.util.function.ToDoubleBiFunction;
 import java.util.function.ToDoubleFunction;
 import java.util.function.ToIntBiFunction;
@@ -68,7 +71,6 @@ import java.util.function.ToIntFunction;
 import java.util.function.ToLongBiFunction;
 import java.util.function.ToLongFunction;
 import java.util.stream.Stream;
-import jdk.internal.misc.Unsafe;
 
 /**
  * A hash table supporting full concurrency of retrievals and
@@ -131,12 +133,12 @@ import jdk.internal.misc.Unsafe;
  * mapped values are (perhaps transiently) not used or all take the
  * same mapping value.
  *
- * <p>A ConcurrentHashMap can be used as a scalable frequency map (a
+ * <p>A ConcurrentHashMap can be used as scalable frequency map (a
  * form of histogram or multiset) by using {@link
  * java.util.concurrent.atomic.LongAdder} values and initializing via
  * {@link #computeIfAbsent computeIfAbsent}. For example, to add a count
  * to a {@code ConcurrentHashMap<String,LongAdder> freqs}, you can use
- * {@code freqs.computeIfAbsent(key, k -> new LongAdder()).increment();}
+ * {@code freqs.computeIfAbsent(k -> new LongAdder()).increment();}
  *
  * <p>This class and its views and iterators implement all of the
  * <em>optional</em> methods of the {@link Map} and {@link Iterator}
@@ -151,42 +153,43 @@ import jdk.internal.misc.Unsafe;
  * being concurrently updated by other threads; for example, when
  * computing a snapshot summary of the values in a shared registry.
  * There are three kinds of operation, each with four forms, accepting
- * functions with keys, values, entries, and (key, value) pairs as
- * arguments and/or return values. Because the elements of a
- * ConcurrentHashMap are not ordered in any particular way, and may be
- * processed in different orders in different parallel executions, the
- * correctness of supplied functions should not depend on any
- * ordering, or on any other objects or values that may transiently
- * change while computation is in progress; and except for forEach
- * actions, should ideally be side-effect-free. Bulk operations on
- * {@link Map.Entry} objects do not support method {@code setValue}.
+ * functions with Keys, Values, Entries, and (Key, Value) arguments
+ * and/or return values. Because the elements of a ConcurrentHashMap
+ * are not ordered in any particular way, and may be processed in
+ * different orders in different parallel executions, the correctness
+ * of supplied functions should not depend on any ordering, or on any
+ * other objects or values that may transiently change while
+ * computation is in progress; and except for forEach actions, should
+ * ideally be side-effect-free. Bulk operations on {@link java.util.Map.Entry}
+ * objects do not support method {@code setValue}.
  *
  * <ul>
- * <li>forEach: Performs a given action on each element.
+ * <li> forEach: Perform a given action on each element.
  * A variant form applies a given transformation on each element
- * before performing the action.
+ * before performing the action.</li>
  *
- * <li>search: Returns the first available non-null result of
+ * <li> search: Return the first available non-null result of
  * applying a given function on each element; skipping further
- * search when a result is found.
+ * search when a result is found.</li>
  *
- * <li>reduce: Accumulates each element.  The supplied reduction
+ * <li> reduce: Accumulate each element.  The supplied reduction
  * function cannot rely on ordering (more formally, it should be
  * both associative and commutative).  There are five variants:
  *
  * <ul>
  *
- * <li>Plain reductions. (There is not a form of this method for
+ * <li> Plain reductions. (There is not a form of this method for
  * (key, value) function arguments since there is no corresponding
- * return type.)
+ * return type.)</li>
  *
- * <li>Mapped reductions that accumulate the results of a given
- * function applied to each element.
+ * <li> Mapped reductions that accumulate the results of a given
+ * function applied to each element.</li>
  *
- * <li>Reductions to scalar doubles, longs, and ints, using a
- * given basis value.
+ * <li> Reductions to scalar doubles, longs, and ints, using a
+ * given basis value.</li>
  *
  * </ul>
+ * </li>
  * </ul>
  *
  * <p>These bulk operations accept a {@code parallelismThreshold}
@@ -253,7 +256,7 @@ import jdk.internal.misc.Unsafe;
  * <p>All arguments to all task methods must be non-null.
  *
  * <p>This class is a member of the
- * <a href="{@docRoot}/java.base/java/util/package-summary.html#CollectionsFramework">
+ * <a href="{@docRoot}/../technotes/guides/collections/index.html">
  * Java Collections Framework</a>.
  *
  * @since 1.5
@@ -297,7 +300,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      * Table accesses require volatile/atomic reads, writes, and
      * CASes.  Because there is no other way to arrange this without
      * adding further indirections, we use intrinsics
-     * (jdk.internal.misc.Unsafe) operations.
+     * (sun.misc.Unsafe) operations.
      *
      * We use the top (sign) bit of Node hash fields for control
      * purposes -- it is available anyway because of addressing
@@ -385,7 +388,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      * cases where old nodes can be reused because their next fields
      * won't change.  On average, only about one-sixth of them need
      * cloning when a table doubles. The nodes they replace will be
-     * garbage collectible as soon as they are no longer referenced by
+     * garbage collectable as soon as they are no longer referenced by
      * any reader thread that may be in the midst of concurrently
      * traversing table.  Upon transfer, the old table bin contains
      * only a special forwarding node (with hash field "MOVED") that
@@ -477,7 +480,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      *
      * Maintaining API and serialization compatibility with previous
      * versions of this class introduces several oddities. Mainly: We
-     * leave untouched but unused constructor arguments referring to
+     * leave untouched but unused constructor arguments refering to
      * concurrencyLevel. We accept a loadFactor constructor argument,
      * but apply it only to initial table capacity (which is the only
      * time that we can guarantee to honor it.) We also declare an
@@ -572,7 +575,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      * The number of bits used for generation stamp in sizeCtl.
      * Must be at least 6 for 32bit arrays.
      */
-    private static final int RESIZE_STAMP_BITS = 16;
+    private static int RESIZE_STAMP_BITS = 16;
 
     /**
      * The maximum number of threads that can help resize.
@@ -596,20 +599,11 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
     /** Number of CPUS, to place bounds on some sizings */
     static final int NCPU = Runtime.getRuntime().availableProcessors();
 
-    /**
-     * Serialized pseudo-fields, provided only for jdk7 compatibility.
-     * @serialField segments Segment[]
-     *   The segments, each of which is a specialized hash table.
-     * @serialField segmentMask int
-     *   Mask value for indexing into segments. The upper bits of a
-     *   key's hash code are used to choose the segment.
-     * @serialField segmentShift int
-     *   Shift value for indexing within segments.
-     */
+    /** For serialization compatibility. */
     private static final ObjectStreamField[] serialPersistentFields = {
         new ObjectStreamField("segments", Segment[].class),
         new ObjectStreamField("segmentMask", Integer.TYPE),
-        new ObjectStreamField("segmentShift", Integer.TYPE),
+        new ObjectStreamField("segmentShift", Integer.TYPE)
     };
 
     /* ---------------- Nodes -------------- */
@@ -628,23 +622,17 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
         volatile V val;
         volatile Node<K,V> next;
 
-        Node(int hash, K key, V val) {
+        Node(int hash, K key, V val, Node<K,V> next) {
             this.hash = hash;
             this.key = key;
             this.val = val;
-        }
-
-        Node(int hash, K key, V val, Node<K,V> next) {
-            this(hash, key, val);
             this.next = next;
         }
 
-        public final K getKey()     { return key; }
-        public final V getValue()   { return val; }
-        public final int hashCode() { return key.hashCode() ^ val.hashCode(); }
-        public final String toString() {
-            return Helpers.mapEntryToString(key, val);
-        }
+        public final K getKey()       { return key; }
+        public final V getValue()     { return val; }
+        public final int hashCode()   { return key.hashCode() ^ val.hashCode(); }
+        public final String toString(){ return key + "=" + val; }
         public final V setValue(V value) {
             throw new UnsupportedOperationException();
         }
@@ -702,7 +690,12 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      * See Hackers Delight, sec 3.2
      */
     private static final int tableSizeFor(int c) {
-        int n = -1 >>> Integer.numberOfLeadingZeros(c - 1);
+        int n = c - 1;
+        n |= n >>> 1;
+        n |= n >>> 2;
+        n |= n >>> 4;
+        n |= n >>> 8;
+        n |= n >>> 16;
         return (n < 0) ? 1 : (n >= MAXIMUM_CAPACITY) ? MAXIMUM_CAPACITY : n + 1;
     }
 
@@ -712,12 +705,12 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      */
     static Class<?> comparableClassFor(Object x) {
         if (x instanceof Comparable) {
-            Class<?> c; Type[] ts, as; ParameterizedType p;
+            Class<?> c; Type[] ts, as; Type t; ParameterizedType p;
             if ((c = x.getClass()) == String.class) // bypass checks
                 return c;
             if ((ts = c.getGenericInterfaces()) != null) {
-                for (Type t : ts) {
-                    if ((t instanceof ParameterizedType) &&
+                for (int i = 0; i < ts.length; ++i) {
+                    if (((t = ts[i]) instanceof ParameterizedType) &&
                         ((p = (ParameterizedType)t).getRawType() ==
                          Comparable.class) &&
                         (as = p.getActualTypeArguments()) != null &&
@@ -742,7 +735,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
     /* ---------------- Table element access -------------- */
 
     /*
-     * Atomic access methods are used for table elements as well as
+     * Volatile access methods are used for table elements as well as
      * elements of in-progress next table while resizing.  All uses of
      * the tab arguments must be null checked by callers.  All callers
      * also paranoically precheck that tab's length is not zero (or an
@@ -752,21 +745,23 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      * errors by users, these checks must operate on local variables,
      * which accounts for some odd-looking inline assignments below.
      * Note that calls to setTabAt always occur within locked regions,
-     * and so require only release ordering.
+     * and so in principle require only release ordering, not
+     * full volatile semantics, but are currently coded as volatile
+     * writes to be conservative.
      */
 
     @SuppressWarnings("unchecked")
     static final <K,V> Node<K,V> tabAt(Node<K,V>[] tab, int i) {
-        return (Node<K,V>)U.getReferenceAcquire(tab, ((long)i << ASHIFT) + ABASE);
+        return (Node<K,V>)U.getObjectVolatile(tab, ((long)i << ASHIFT) + ABASE);
     }
 
     static final <K,V> boolean casTabAt(Node<K,V>[] tab, int i,
                                         Node<K,V> c, Node<K,V> v) {
-        return U.compareAndSetReference(tab, ((long)i << ASHIFT) + ABASE, c, v);
+        return U.compareAndSwapObject(tab, ((long)i << ASHIFT) + ABASE, c, v);
     }
 
     static final <K,V> void setTabAt(Node<K,V>[] tab, int i, Node<K,V> v) {
-        U.putReferenceRelease(tab, ((long)i << ASHIFT) + ABASE, v);
+        U.putObjectVolatile(tab, ((long)i << ASHIFT) + ABASE, v);
     }
 
     /* ---------------- Fields -------------- */
@@ -839,7 +834,12 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      * elements is negative
      */
     public ConcurrentHashMap(int initialCapacity) {
-        this(initialCapacity, LOAD_FACTOR, 1);
+        if (initialCapacity < 0)
+            throw new IllegalArgumentException();
+        int cap = ((initialCapacity >= (MAXIMUM_CAPACITY >>> 1)) ?
+                   MAXIMUM_CAPACITY :
+                   tableSizeFor(initialCapacity + (initialCapacity >>> 1) + 1));
+        this.sizeCtl = cap;
     }
 
     /**
@@ -873,8 +873,8 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
 
     /**
      * Creates a new, empty map with an initial table size based on
-     * the given number of elements ({@code initialCapacity}), initial
-     * table density ({@code loadFactor}), and number of concurrently
+     * the given number of elements ({@code initialCapacity}), table
+     * density ({@code loadFactor}), and number of concurrently
      * updating threads ({@code concurrencyLevel}).
      *
      * @param initialCapacity the initial capacity. The implementation
@@ -933,15 +933,21 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      */
     public V get(Object key) {
         Node<K,V>[] tab; Node<K,V> e, p; int n, eh; K ek;
+		// 计算hash
         int h = spread(key.hashCode());
+		// 如果hash表不为空 并且长度>0 并且对应槽位有元素 
         if ((tab = table) != null && (n = tab.length) > 0 &&
             (e = tabAt(tab, (n - 1) & h)) != null) {
+            // 匹配hash值 
             if ((eh = e.hash) == h) {
+				// 地址相等 或者 equals 返回true 认为key相同 返回对应的value
                 if ((ek = e.key) == key || (ek != null && key.equals(ek)))
                     return e.val;
             }
+			// hash 为负数表示该 bin 在扩容中或是 treebin, 这时调用 find 方法来查找
             else if (eh < 0)
                 return (p = e.find(h, key)) != null ? p.val : null;
+			// 遍历链表, 用 equals 比较
             while ((e = e.next) != null) {
                 if (e.hash == h &&
                     ((ek = e.key) == key || (ek != null && key.equals(ek))))
@@ -1008,25 +1014,28 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
 
     /** Implementation for put and putIfAbsent */
     final V putVal(K key, V value, boolean onlyIfAbsent) {
+    //key和value不支持null
         if (key == null || value == null) throw new NullPointerException();
+		//计算hash值
         int hash = spread(key.hashCode());
         int binCount = 0;
         for (Node<K,V>[] tab = table;;) {
-            Node<K,V> f; int n, i, fh; K fk; V fv;
+            Node<K,V> f; int n, i, fh;
+			//如果table是空的则进行初始化  (懒加载)
             if (tab == null || (n = tab.length) == 0)
                 tab = initTable();
+			//对应位置为空直接cas操作赋值,失败则自旋
             else if ((f = tabAt(tab, i = (n - 1) & hash)) == null) {
-                if (casTabAt(tab, i, null, new Node<K,V>(hash, key, value)))
+                if (casTabAt(tab, i, null,
+                             new Node<K,V>(hash, key, value, null)))
                     break;                   // no lock when adding to empty bin
             }
+			//如果对应槽位不为空，且他的 hash 值是 -1，说明正在扩容，那么就帮助其扩容。以加快速度
+			//原因为ForwardingNode的构造方法中将hash设置为-1，且ForwardingNode只有在扩容时有初始化动作
             else if ((fh = f.hash) == MOVED)
                 tab = helpTransfer(tab, f);
-            else if (onlyIfAbsent // check first node without acquiring lock
-                     && fh == hash
-                     && ((fk = f.key) == key || (fk != null && key.equals(fk)))
-                     && (fv = f.val) != null)
-                return fv;
             else {
+				//利用 synchronized 锁写入数据         锁的是hash表的头节点
                 V oldVal = null;
                 synchronized (f) {
                     if (tabAt(tab, i) == f) {
@@ -1034,21 +1043,26 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                             binCount = 1;
                             for (Node<K,V> e = f;; ++binCount) {
                                 K ek;
+								//key的hash值相等并且equals为true 值替换  否则一直往后找知道链表尾部追加
                                 if (e.hash == hash &&
                                     ((ek = e.key) == key ||
                                      (ek != null && key.equals(ek)))) {
                                     oldVal = e.val;
+									//如果onlyIfAbsent为true,有key的hash值相等并且equals为true直接返回,put失败
                                     if (!onlyIfAbsent)
                                         e.val = value;
                                     break;
                                 }
                                 Node<K,V> pred = e;
                                 if ((e = e.next) == null) {
-                                    pred.next = new Node<K,V>(hash, key, value);
+                                    pred.next = new Node<K,V>(hash, key,
+                                                              value, null);
                                     break;
                                 }
                             }
                         }
+						//如果当前就是红黑树就添加到红黑树中并且进行平衡
+						//TreeBin为hash表的顶级容器，不保存key-value,指向TreeNode根节点
                         else if (f instanceof TreeBin) {
                             Node<K,V> p;
                             binCount = 2;
@@ -1059,11 +1073,10 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                                     p.val = value;
                             }
                         }
-                        else if (f instanceof ReservationNode)
-                            throw new IllegalStateException("Recursive update");
                     }
                 }
                 if (binCount != 0) {
+					//转化为红黑树
                     if (binCount >= TREEIFY_THRESHOLD)
                         treeifyBin(tab, i);
                     if (oldVal != null)
@@ -1072,6 +1085,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                 }
             }
         }
+		//会判断是否需要扩容
         addCount(1L, binCount);
         return null;
     }
@@ -1163,8 +1177,6 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                                 }
                             }
                         }
-                        else if (f instanceof ReservationNode)
-                            throw new IllegalStateException("Recursive update");
                     }
                 }
                 if (validated) {
@@ -1235,8 +1247,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      */
     public KeySetView<K,V> keySet() {
         KeySetView<K,V> ks;
-        if ((ks = keySet) != null) return ks;
-        return keySet = new KeySetView<K,V>(this, null);
+        return (ks = keySet) != null ? ks : (keySet = new KeySetView<K,V>(this, null));
     }
 
     /**
@@ -1259,8 +1270,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      */
     public Collection<V> values() {
         ValuesView<K,V> vs;
-        if ((vs = values) != null) return vs;
-        return values = new ValuesView<K,V>(this);
+        return (vs = values) != null ? vs : (values = new ValuesView<K,V>(this));
     }
 
     /**
@@ -1282,8 +1292,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      */
     public Set<Map.Entry<K,V>> entrySet() {
         EntrySetView<K,V> es;
-        if ((es = entrySet) != null) return es;
-        return entrySet = new EntrySetView<K,V>(this);
+        return (es = entrySet) != null ? es : (entrySet = new EntrySetView<K,V>(this));
     }
 
     /**
@@ -1375,7 +1384,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
 
     /**
      * Stripped-down version of helper class used in previous version,
-     * declared for the sake of serialization compatibility.
+     * declared for the sake of serialization compatibility
      */
     static class Segment<K,V> extends ReentrantLock implements Serializable {
         private static final long serialVersionUID = 2249069246763182397L;
@@ -1384,13 +1393,13 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
     }
 
     /**
-     * Saves this map to a stream (that is, serializes it).
-     *
+     * Saves the state of the {@code ConcurrentHashMap} instance to a
+     * stream (i.e., serializes it).
      * @param s the stream
      * @throws java.io.IOException if an I/O error occurs
      * @serialData
-     * the serialized fields, followed by the key (Object) and value
-     * (Object) for each key-value mapping, followed by a null pair.
+     * the key (Object) and value (Object)
+     * for each key-value mapping, followed by a null pair.
      * The key-value mappings are emitted in no particular order.
      */
     private void writeObject(java.io.ObjectOutputStream s)
@@ -1410,10 +1419,9 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
             new Segment<?,?>[DEFAULT_CONCURRENCY_LEVEL];
         for (int i = 0; i < segments.length; ++i)
             segments[i] = new Segment<K,V>(LOAD_FACTOR);
-        java.io.ObjectOutputStream.PutField streamFields = s.putFields();
-        streamFields.put("segments", segments);
-        streamFields.put("segmentShift", segmentShift);
-        streamFields.put("segmentMask", segmentMask);
+        s.putFields().put("segments", segments);
+        s.putFields().put("segmentShift", segmentShift);
+        s.putFields().put("segmentMask", segmentMask);
         s.writeFields();
 
         Node<K,V>[] t;
@@ -1426,10 +1434,11 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
         }
         s.writeObject(null);
         s.writeObject(null);
+        segments = null; // throw away
     }
 
     /**
-     * Reconstitutes this map from a stream (that is, deserializes it).
+     * Reconstitutes the instance from a stream (that is, deserializes it).
      * @param s the stream
      * @throws ClassNotFoundException if the class of a serialized object
      *         could not be found
@@ -1463,9 +1472,13 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
         if (size == 0L)
             sizeCtl = 0;
         else {
-            long ts = (long)(1.0 + size / LOAD_FACTOR);
-            int n = (ts >= (long)MAXIMUM_CAPACITY) ?
-                MAXIMUM_CAPACITY : tableSizeFor((int)ts);
+            int n;
+            if (size >= (long)(MAXIMUM_CAPACITY >>> 1))
+                n = MAXIMUM_CAPACITY;
+            else {
+                int sz = (int)size;
+                n = tableSizeFor(sz + (sz >>> 1) + 1);
+            }
             @SuppressWarnings("unchecked")
             Node<K,V>[] tab = (Node<K,V>[])new Node<?,?>[n];
             int mask = n - 1;
@@ -1625,56 +1638,14 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
     }
 
     /**
-     * Helper method for EntrySetView.removeIf.
-     */
-    boolean removeEntryIf(Predicate<? super Entry<K,V>> function) {
-        if (function == null) throw new NullPointerException();
-        Node<K,V>[] t;
-        boolean removed = false;
-        if ((t = table) != null) {
-            Traverser<K,V> it = new Traverser<K,V>(t, t.length, 0, t.length);
-            for (Node<K,V> p; (p = it.advance()) != null; ) {
-                K k = p.key;
-                V v = p.val;
-                Map.Entry<K,V> e = new AbstractMap.SimpleImmutableEntry<>(k, v);
-                if (function.test(e) && replaceNode(k, null, v) != null)
-                    removed = true;
-            }
-        }
-        return removed;
-    }
-
-    /**
-     * Helper method for ValuesView.removeIf.
-     */
-    boolean removeValueIf(Predicate<? super V> function) {
-        if (function == null) throw new NullPointerException();
-        Node<K,V>[] t;
-        boolean removed = false;
-        if ((t = table) != null) {
-            Traverser<K,V> it = new Traverser<K,V>(t, t.length, 0, t.length);
-            for (Node<K,V> p; (p = it.advance()) != null; ) {
-                K k = p.key;
-                V v = p.val;
-                if (function.test(v) && replaceNode(k, null, v) != null)
-                    removed = true;
-            }
-        }
-        return removed;
-    }
-
-    /**
      * If the specified key is not already associated with a value,
      * attempts to compute its value using the given mapping function
      * and enters it into this map unless {@code null}.  The entire
-     * method invocation is performed atomically.  The supplied
-     * function is invoked exactly once per invocation of this method
-     * if the key is absent, else not at all.  Some attempted update
-     * operations on this map by other threads may be blocked while
-     * computation is in progress, so the computation should be short
-     * and simple.
-     *
-     * <p>The mapping function must not modify this map during computation.
+     * method invocation is performed atomically, so the function is
+     * applied at most once per key.  Some attempted update operations
+     * on this map by other threads may be blocked while computation
+     * is in progress, so the computation should be short and simple,
+     * and must not attempt to update any other mappings of this map.
      *
      * @param key key with which the specified value is to be associated
      * @param mappingFunction the function to compute a value
@@ -1695,7 +1666,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
         V val = null;
         int binCount = 0;
         for (Node<K,V>[] tab = table;;) {
-            Node<K,V> f; int n, i, fh; K fk; V fv;
+            Node<K,V> f; int n, i, fh;
             if (tab == null || (n = tab.length) == 0)
                 tab = initTable();
             else if ((f = tabAt(tab, i = (n - 1) & h)) == null) {
@@ -1706,7 +1677,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                         Node<K,V> node = null;
                         try {
                             if ((val = mappingFunction.apply(key)) != null)
-                                node = new Node<K,V>(h, key, val);
+                                node = new Node<K,V>(h, key, val, null);
                         } finally {
                             setTabAt(tab, i, node);
                         }
@@ -1717,10 +1688,6 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
             }
             else if ((fh = f.hash) == MOVED)
                 tab = helpTransfer(tab, f);
-            else if (fh == h    // check first node without acquiring lock
-                     && ((fk = f.key) == key || (fk != null && key.equals(fk)))
-                     && (fv = f.val) != null)
-                return fv;
             else {
                 boolean added = false;
                 synchronized (f) {
@@ -1728,7 +1695,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                         if (fh >= 0) {
                             binCount = 1;
                             for (Node<K,V> e = f;; ++binCount) {
-                                K ek;
+                                K ek; V ev;
                                 if (e.hash == h &&
                                     ((ek = e.key) == key ||
                                      (ek != null && key.equals(ek)))) {
@@ -1738,10 +1705,8 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                                 Node<K,V> pred = e;
                                 if ((e = e.next) == null) {
                                     if ((val = mappingFunction.apply(key)) != null) {
-                                        if (pred.next != null)
-                                            throw new IllegalStateException("Recursive update");
                                         added = true;
-                                        pred.next = new Node<K,V>(h, key, val);
+                                        pred.next = new Node<K,V>(h, key, val, null);
                                     }
                                     break;
                                 }
@@ -1759,8 +1724,6 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                                 t.putTreeVal(h, key, val);
                             }
                         }
-                        else if (f instanceof ReservationNode)
-                            throw new IllegalStateException("Recursive update");
                     }
                 }
                 if (binCount != 0) {
@@ -1781,13 +1744,10 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      * If the value for the specified key is present, attempts to
      * compute a new mapping given the key and its current mapped
      * value.  The entire method invocation is performed atomically.
-     * The supplied function is invoked exactly once per invocation of
-     * this method if the key is present, else not at all.  Some
-     * attempted update operations on this map by other threads may be
-     * blocked while computation is in progress, so the computation
-     * should be short and simple.
-     *
-     * <p>The remapping function must not modify this map during computation.
+     * Some attempted update operations on this map by other threads
+     * may be blocked while computation is in progress, so the
+     * computation should be short and simple, and must not attempt to
+     * update any other mappings of this map.
      *
      * @param key key with which a value may be associated
      * @param remappingFunction the function to compute a value
@@ -1859,8 +1819,6 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                                 }
                             }
                         }
-                        else if (f instanceof ReservationNode)
-                            throw new IllegalStateException("Recursive update");
                     }
                 }
                 if (binCount != 0)
@@ -1876,12 +1834,10 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      * Attempts to compute a mapping for the specified key and its
      * current mapped value (or {@code null} if there is no current
      * mapping). The entire method invocation is performed atomically.
-     * The supplied function is invoked exactly once per invocation of
-     * this method.  Some attempted update operations on this map by
-     * other threads may be blocked while computation is in progress,
-     * so the computation should be short and simple.
-     *
-     * <p>The remapping function must not modify this map during computation.
+     * Some attempted update operations on this map by other threads
+     * may be blocked while computation is in progress, so the
+     * computation should be short and simple, and must not attempt to
+     * update any other mappings of this Map.
      *
      * @param key key with which the specified value is to be associated
      * @param remappingFunction the function to compute a value
@@ -1915,7 +1871,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                         try {
                             if ((val = remappingFunction.apply(key, null)) != null) {
                                 delta = 1;
-                                node = new Node<K,V>(h, key, val);
+                                node = new Node<K,V>(h, key, val, null);
                             }
                         } finally {
                             setTabAt(tab, i, node);
@@ -1954,10 +1910,9 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                                 if ((e = e.next) == null) {
                                     val = remappingFunction.apply(key, null);
                                     if (val != null) {
-                                        if (pred.next != null)
-                                            throw new IllegalStateException("Recursive update");
                                         delta = 1;
-                                        pred.next = new Node<K,V>(h, key, val);
+                                        pred.next =
+                                            new Node<K,V>(h, key, val, null);
                                     }
                                     break;
                                 }
@@ -1987,8 +1942,6 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                                     setTabAt(tab, i, untreeify(t.first));
                             }
                         }
-                        else if (f instanceof ReservationNode)
-                            throw new IllegalStateException("Recursive update");
                     }
                 }
                 if (binCount != 0) {
@@ -2035,7 +1988,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
             if (tab == null || (n = tab.length) == 0)
                 tab = initTable();
             else if ((f = tabAt(tab, i = (n - 1) & h)) == null) {
-                if (casTabAt(tab, i, null, new Node<K,V>(h, key, value))) {
+                if (casTabAt(tab, i, null, new Node<K,V>(h, key, value, null))) {
                     delta = 1;
                     val = value;
                     break;
@@ -2070,7 +2023,8 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                                 if ((e = e.next) == null) {
                                     delta = 1;
                                     val = value;
-                                    pred.next = new Node<K,V>(h, key, val);
+                                    pred.next =
+                                        new Node<K,V>(h, key, val, null);
                                     break;
                                 }
                             }
@@ -2097,8 +2051,6 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                                     setTabAt(tab, i, untreeify(t.first));
                             }
                         }
-                        else if (f instanceof ReservationNode)
-                            throw new IllegalStateException("Recursive update");
                     }
                 }
                 if (binCount != 0) {
@@ -2116,13 +2068,12 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
     // Hashtable legacy methods
 
     /**
-     * Tests if some key maps into the specified value in this table.
-     *
-     * <p>Note that this method is identical in functionality to
+     * Legacy method testing if some key maps into the specified value
+     * in this table.  This method is identical in functionality to
      * {@link #containsValue(Object)}, and exists solely to ensure
      * full compatibility with class {@link java.util.Hashtable},
      * which supported this method prior to introduction of the
-     * Java Collections Framework.
+     * Java Collections framework.
      *
      * @param  value a value to search for
      * @return {@code true} if and only if some key maps to the
@@ -2231,7 +2182,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
     static final class ForwardingNode<K,V> extends Node<K,V> {
         final Node<K,V>[] nextTable;
         ForwardingNode(Node<K,V>[] tab) {
-            super(MOVED, null, null);
+            super(MOVED, null, null, null);
             this.nextTable = tab;
         }
 
@@ -2263,11 +2214,11 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
     }
 
     /**
-     * A place-holder node used in computeIfAbsent and compute.
+     * A place-holder node used in computeIfAbsent and compute
      */
     static final class ReservationNode<K,V> extends Node<K,V> {
         ReservationNode() {
-            super(RESERVED, null, null);
+            super(RESERVED, null, null, null);
         }
 
         Node<K,V> find(int h, Object k) {
@@ -2293,13 +2244,16 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
         while ((tab = table) == null || tab.length == 0) {
             if ((sc = sizeCtl) < 0)
                 Thread.yield(); // lost initialization race; just spin
-            else if (U.compareAndSetInt(this, SIZECTL, sc, -1)) {
+                //让出cpu自旋
+            //将sc设置为-1 表示正在进行初始化
+            else if (U.compareAndSwapInt(this, SIZECTL, sc, -1)) {
                 try {
                     if ((tab = table) == null || tab.length == 0) {
                         int n = (sc > 0) ? sc : DEFAULT_CAPACITY;
                         @SuppressWarnings("unchecked")
                         Node<K,V>[] nt = (Node<K,V>[])new Node<?,?>[n];
                         table = tab = nt;
+                        //相当于sc = 0.75 * sc
                         sc = n - (n >>> 2);
                     }
                 } finally {
@@ -2322,35 +2276,58 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      * @param check if <0, don't check resize, if <= 1 only check if uncontended
      */
     private final void addCount(long x, int check) {
-        CounterCell[] cs; long b, s;
-        if ((cs = counterCells) != null ||
-            !U.compareAndSetLong(this, BASECOUNT, b = baseCount, s = b + x)) {
-            CounterCell c; long v; int m;
+        CounterCell[] as; long b, s;
+		// 首先if判断counterCells为空并且对当前map对象cas操作baseCount + x成功，就跳过if里的操作，
+        // 因为都cas操作baseCount + x成功了，就不需要通过counterCells辅助了，简单明了。
+        if ((as = counterCells) != null ||
+            !U.compareAndSwapLong(this, BASECOUNT, b = baseCount, s = b + x)) {
+            CounterCell a; long v; int m;
             boolean uncontended = true;
-            if (cs == null || (m = cs.length - 1) < 0 ||
-                (c = cs[ThreadLocalRandom.getProbe() & m]) == null ||
+			// 如果CounterCell[]是null
+	        // 或者CounterCell[]不为null的情况下CounterCell[]的长度小于1也就是等于0，
+	        // 或者CounterCell[]长度不为0的情况下随机计算一个CounterCell[]的下标，并判断此下标位置是否为空
+	        // 或者CounterCell[]中的某下标位置不为null的情况下通过cas修改CounterCell中的值失败了
+	        // 才调用fullAddCount方法，然后返回
+            if (as == null || (m = as.length - 1) < 0 ||
+                (a = as[ThreadLocalRandom.getProbe() & m]) == null ||
                 !(uncontended =
-                  U.compareAndSetLong(c, CELLVALUE, v = c.value, v + x))) {
+                // cas对CounterCell对象中的value执行+x(也就是+1)操作
+                  U.compareAndSwapLong(a, CELLVALUE, v = a.value, v + x))) {
                 fullAddCount(x, uncontended);
                 return;
             }
             if (check <= 1)
                 return;
+			// 如果修改CELLVALUE成功了，则统计ConcurrentHashMap的元素个数
             s = sumCount();
         }
+		//下面是扩容逻辑的判断
+		//if (check >= 0)判断put传入的binCount(也就是check)，check为-1的时候代表删除操作。通过check的正负判断是否进行扩容操作。
         if (check >= 0) {
+			//sizeCtl为扩容的阈值。 默认为0,初始化是为-1,初始化完成后置为阈值(sc = n - (n >>> 2);)
             Node<K,V>[] tab, nt; int n, sc;
+			// 如果元素个数大于等于了阈值或-1就自旋扩容
             while (s >= (long)(sc = sizeCtl) && (tab = table) != null &&
                    (n = tab.length) < MAXIMUM_CAPACITY) {
-                int rs = resizeStamp(n) << RESIZE_STAMP_SHIFT;
+                   //rs = 0000 0000 0000 0000 1000 0000 00000000 | n前面0的个数
+                int rs = resizeStamp(n);
                 if (sc < 0) {
-                    if (sc == rs + MAX_RESIZERS || sc == rs + 1 ||
-                        (nt = nextTable) == null || transferIndex <= 0)
+					// 如果全部元素已经转移完了，或者已经达到了最大并发扩容数限制则breack
+                    if ((sc >>> RESIZE_STAMP_SHIFT) != rs || sc == rs + 1 ||
+                        sc == rs + MAX_RESIZERS || (nt = nextTable) == null ||
+                        transferIndex <= 0)
                         break;
-                    if (U.compareAndSetInt(this, SIZECTL, sc, sc + 1))
+					// 如果没有，则sizeCtl加1，然后进行转移元素
+                    if (U.compareAndSwapInt(this, SIZECTL, sc, sc + 1))
                         transfer(tab, nt);
                 }
-                else if (U.compareAndSetInt(this, SIZECTL, sc, rs + 2))
+				//Integer.numberOfLeadingZeros(n) //结果为n的二进制前面有多少个连续的0  假设n=16 ，结果为27 
+ 				//(1 << (RESIZE_STAMP_BITS - 1)) // 为 1 << 15 即高16位为0 低16位第一位为1其余为0 
+    			//resizeStamp(16) = 32795 即 0000 0000 0000 0000 1000 0000 0001 1011
+    			//rs << RESIZE_STAMP_SHIFT) + 2 结果为1000 0000 0001 1011 0000 0000 0000 0010
+    			//rs低16位代表当前参与扩容的线程数+1      	  如果最高位为1则为负数 说明已经有线程扩容 在helpTransfer中有处理
+                else if (U.compareAndSwapInt(this, SIZECTL, sc,
+                                             (rs << RESIZE_STAMP_SHIFT) + 2))
                     transfer(tab, null);
                 s = sumCount();
             }
@@ -2360,17 +2337,21 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
     /**
      * Helps transfer if a resize is in progress.
      */
+     //入参是：成员变量 table 和 对应槽位的 f 变量。
     final Node<K,V>[] helpTransfer(Node<K,V>[] tab, Node<K,V> f) {
         Node<K,V>[] nextTab; int sc;
+		// 如果 table 不是空 且 node 节点是转移类型，数据检验   ForwardingNode只有在扩容时有初始化
+    	// 且 node 节点的 nextTable（新 table） 不是空，同样也是数据校验
+    	// 尝试帮助扩容
         if (tab != null && (f instanceof ForwardingNode) &&
             (nextTab = ((ForwardingNode<K,V>)f).nextTable) != null) {
-            int rs = resizeStamp(tab.length) << RESIZE_STAMP_SHIFT;
+            int rs = resizeStamp(tab.length);
             while (nextTab == nextTable && table == tab &&
                    (sc = sizeCtl) < 0) {
-                if (sc == rs + MAX_RESIZERS || sc == rs + 1 ||
-                    transferIndex <= 0)
+                if ((sc >>> RESIZE_STAMP_SHIFT) != rs || sc == rs + 1 ||
+                    sc == rs + MAX_RESIZERS || transferIndex <= 0)
                     break;
-                if (U.compareAndSetInt(this, SIZECTL, sc, sc + 1)) {
+                if (U.compareAndSwapInt(this, SIZECTL, sc, sc + 1)) {
                     transfer(tab, nextTab);
                     break;
                 }
@@ -2393,7 +2374,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
             Node<K,V>[] tab = table; int n;
             if (tab == null || (n = tab.length) == 0) {
                 n = (sc > c) ? sc : c;
-                if (U.compareAndSetInt(this, SIZECTL, sc, -1)) {
+                if (U.compareAndSwapInt(this, SIZECTL, sc, -1)) {
                     try {
                         if (table == tab) {
                             @SuppressWarnings("unchecked")
@@ -2410,8 +2391,17 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                 break;
             else if (tab == table) {
                 int rs = resizeStamp(n);
-                if (U.compareAndSetInt(this, SIZECTL, sc,
-                                        (rs << RESIZE_STAMP_SHIFT) + 2))
+                if (sc < 0) {
+                    Node<K,V>[] nt;
+                    if ((sc >>> RESIZE_STAMP_SHIFT) != rs || sc == rs + 1 ||
+                        sc == rs + MAX_RESIZERS || (nt = nextTable) == null ||
+                        transferIndex <= 0)
+                        break;
+                    if (U.compareAndSwapInt(this, SIZECTL, sc, sc + 1))
+                        transfer(tab, nt);
+                }
+                else if (U.compareAndSwapInt(this, SIZECTL, sc,
+                                             (rs << RESIZE_STAMP_SHIFT) + 2))
                     transfer(tab, null);
             }
         }
@@ -2423,35 +2413,59 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      */
     private final void transfer(Node<K,V>[] tab, Node<K,V>[] nextTab) {
         int n = tab.length, stride;
+		// stride表示步长，步长最小为16，如果CPU只有一核，那么步长为n
+	    // 既如果只有一个cpu,那么只有一个线程来进行扩容
+	    // 步长代表一个线程负责转移的桶的个数
         if ((stride = (NCPU > 1) ? (n >>> 3) / NCPU : n) < MIN_TRANSFER_STRIDE)
             stride = MIN_TRANSFER_STRIDE; // subdivide range
         if (nextTab == null) {            // initiating
             try {
+				//左移一位即2倍扩容
                 @SuppressWarnings("unchecked")
                 Node<K,V>[] nt = (Node<K,V>[])new Node<?,?>[n << 1];
                 nextTab = nt;
             } catch (Throwable ex) {      // try to cope with OOME
+            //异常阈值为Integer最大值   (扩容保护)
                 sizeCtl = Integer.MAX_VALUE;
                 return;
             }
+			//n为扩容之前数组的长度，stride 主要和CPU相关，含义为步长，每个线程在扩容时拿到的长度，最小为16。
+			//nextTab为新的table，如果nextTab为空就新建一个table，大小为原来的2倍，代表双倍扩容。
             nextTable = nextTab;
-            transferIndex = n;
+			// 因为是两倍扩容，相当于两个老数组结合成了一个新数组，transferIndex表示第二个小数组的第一个元素的下标
+            transferIndex = n;//n为扩容前的大小。
         }
-        int nextn = nextTab.length;
+        int nextn = nextTab.length;  //nextn为扩容后数组的大小
+        //构建一个ForwardingNode用户并发扩容     			fwd是一个标志，标明此节点正在进行迁移。当其他线程进行操作的时候发现这个位置存放的是fwd就知道正在进行扩容。
         ForwardingNode<K,V> fwd = new ForwardingNode<K,V>(nextTab);
+		// advance为true时，当前桶是否已经迁移完成，如果迁移完成则开始处理下一个桶
         boolean advance = true;
         boolean finishing = false; // to ensure sweep before committing nextTab
         for (int i = 0, bound = 0;;) {
             Node<K,V> f; int fh;
+			//每次判断
             while (advance) {
                 int nextIndex, nextBound;
-                if (--i >= bound || finishing)
+                if (--i >= bound || finishing)//检查结束条件
                     advance = false;
+				//<=0表示所有桶都已迁移完成
                 else if ((nextIndex = transferIndex) <= 0) {
                     i = -1;
                     advance = false;
                 }
-                else if (U.compareAndSetInt
+				// 通过cas来修改TRANSFERINDEX，如果修改成功则对bound和i进行赋值
+	            // 第一循环将进入到这里，来赋值bound和i
+	            // nextIndex就是transferIndex，假设为64，假如步长为16，那么就分为4个组，每组16个桶
+	            // 0-15,16-31,32-47,48-63
+	            // nextBound = 64-16=48
+	            // i=64-1=63
+	            // 所以bound表示一个步长里的最小的下标，i表示一个步长里的最大下标
+	            // TRANSFERINDEX是比较重要的，每个线程在进行元素的转移之前需要确定当前线程从哪个位置开始（从后往前）
+	            // TRANSFERINDEX每次减掉一个步长，所以当下一个线程准备转移元素时就可以从最新的TRANSFERINDEX开始了
+	            // 移动的元素为bount-i
+	            
+	            // 如果没有修改成功则继续循环
+                else if (U.compareAndSwapInt
                          (this, TRANSFERINDEX, nextIndex,
                           nextBound = (nextIndex > stride ?
                                        nextIndex - stride : 0))) {
@@ -2460,39 +2474,66 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                     advance = false;
                 }
             }
+			 // i表示一个步长里的最大下标, 如果i小于0或者大于等于老数组长度，或者下标+老数组长度大于等等新数组长度
             if (i < 0 || i >= n || i + n >= nextn) {
                 int sc;
+				//转移完成
                 if (finishing) {
                     nextTable = null;
                     table = nextTab;
+					//设置阈值  等价于 2*n-0.5n= 1.5n    即新容量的0.75
                     sizeCtl = (n << 1) - (n >>> 1);
                     return;
                 }
-                if (U.compareAndSetInt(this, SIZECTL, sc = sizeCtl, sc - 1)) {
+				// 每个线程负责的转移任务结束后利用cas来对sizeCtl减1  代表当前线程已分配移动任务 当前参与扩容线程-1
+                if (U.compareAndSwapInt(this, SIZECTL, sc = sizeCtl, sc - 1)) {
+					// 当前线程负责的任务做完了，同时还有其他线程还在做任务，则回到上层重新申请任务来做
                     if ((sc - 2) != resizeStamp(n) << RESIZE_STAMP_SHIFT)
                         return;
+					// 当前线程负责的任务做完了，也没有其他线程在做任务了，那么则表示扩容结束了
                     finishing = advance = true;
                     i = n; // recheck before commit
                 }
             }
+			// 从i位置开始转移元素
+	        // 如果老数组的i位置元素为null,则表示该位置上的元素已经被分配转移了，
+	        // 则通过cas设置为ForwardingNode，表示无需转移
             else if ((f = tabAt(tab, i)) == null)
                 advance = casTabAt(tab, i, null, fwd);
+			// 如果i位置已经是ForwardingNode，则跳过该位置（就是桶）
             else if ((fh = f.hash) == MOVED)
                 advance = true; // already processed
             else {
+				// 加锁，开始转移
                 synchronized (f) {
+					// 加锁完了之后再次检查一遍tab[i]是否发生了变化
                     if (tabAt(tab, i) == f) {
                         Node<K,V> ln, hn;
+						// fh大于等于0表示是链表  否则走else 即红黑树  fh为桶位置节点的hash值  红黑树TreeBin节点的hash为-2
+						// static final int TREEBIN   = -2; // hash for roots of trees
                         if (fh >= 0) {
+							// n是老数组的长度
+                        	// 因为n是2的幂次方数，所以runbit只有两种结果:0和n
                             int runBit = fh & n;
+							 // 遍历链表，lastRun为当前链表上runbit连续相同的一小段的最后一段
                             Node<K,V> lastRun = f;
                             for (Node<K,V> p = f.next; p != null; p = p.next) {
                                 int b = p.hash & n;
+								//不等于就更新 所以是runbit连续相同的最后一部分
                                 if (b != runBit) {
                                     runBit = b;
                                     lastRun = p;
                                 }
                             }
+							// 如果最后一段的runBit为0，则则该段应该保持在当前位置
+                       		// 否则应该设置到i+n位置
+                       		// 假设hash值为18     hash表长4 10010 & (11) = 10 
+                       		// 扩容后 10010 & (111) = 2
+                       		// 18 对应的 runBit = 0
+                       		// 假设hash值为20     hash表长4 10110 & (11) = 10
+                       		// 扩容后 10110 & (111) = 2 = 110
+                       		// 20 对应的 runBit = 4
+                       		// 20 对应扩容后的位置即为 110 即 原有位置 i + n
                             if (runBit == 0) {
                                 ln = lastRun;
                                 hn = null;
@@ -2501,15 +2542,23 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                                 hn = lastRun;
                                 ln = null;
                             }
+							//从头节点开始，遍历链表到lastRun结束
                             for (Node<K,V> p = f; p != lastRun; p = p.next) {
                                 int ph = p.hash; K pk = p.key; V pv = p.val;
+								// 如果ph & n，则将遍历到的节点插入到ln的前面
+                            	// 否则将遍历到的节点插入到hn的前面
+                            	// ph & n == 0 说明不需要移动 
+                            	//假设 表长4  		hash值&表长==0 说明 hash值从低位开始第3位为0  扩容后 & 2*n -1 低位开始第三位同样是0 即不需要移动
                                 if ((ph & n) == 0)
                                     ln = new Node<K,V>(ph, pk, pv, ln);
                                 else
                                     hn = new Node<K,V>(ph, pk, pv, hn);
                             }
+							// 将ln链表赋值在新tab的i位置
                             setTabAt(nextTab, i, ln);
+							// 将hn链表赋值在新tab的i+n位置
                             setTabAt(nextTab, i + n, hn);
+							// 这是老tab的i位置ForwardingNode节点，表示转移完成
                             setTabAt(tab, i, fwd);
                             advance = true;
                         }
@@ -2539,17 +2588,18 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                                     ++hc;
                                 }
                             }
+							//如果拆分后的树的节点数量已经少于6个就需要重新转化为链表
                             ln = (lc <= UNTREEIFY_THRESHOLD) ? untreeify(lo) :
                                 (hc != 0) ? new TreeBin<K,V>(lo) : t;
                             hn = (hc <= UNTREEIFY_THRESHOLD) ? untreeify(hi) :
                                 (lc != 0) ? new TreeBin<K,V>(hi) : t;
+							//CAS存储在nextTable的i位置上
                             setTabAt(nextTab, i, ln);
                             setTabAt(nextTab, i + n, hn);
+							//CAS在原table的i处设置forwordingNode节点，表示这个这个节点已经处理完毕
                             setTabAt(tab, i, fwd);
                             advance = true;
                         }
-                        else if (f instanceof ReservationNode)
-                            throw new IllegalStateException("Recursive update");
                     }
                 }
             }
@@ -2562,18 +2612,19 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      * A padded cell for distributing counts.  Adapted from LongAdder
      * and Striped64.  See their internal docs for explanation.
      */
-    @jdk.internal.vm.annotation.Contended static final class CounterCell {
+    @sun.misc.Contended static final class CounterCell {
         volatile long value;
         CounterCell(long x) { value = x; }
     }
 
     final long sumCount() {
-        CounterCell[] cs = counterCells;
+        CounterCell[] as = counterCells; CounterCell a;
         long sum = baseCount;
-        if (cs != null) {
-            for (CounterCell c : cs)
-                if (c != null)
-                    sum += c.value;
+        if (as != null) {
+            for (int i = 0; i < as.length; ++i) {
+                if ((a = as[i]) != null)
+                    sum += a.value;
+            }
         }
         return sum;
     }
@@ -2588,16 +2639,27 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
         }
         boolean collide = false;                // True if last slot nonempty
         for (;;) {
-            CounterCell[] cs; CounterCell c; int n; long v;
-            if ((cs = counterCells) != null && (n = cs.length) > 0) {
-                if ((c = cs[(n - 1) & h]) == null) {
+            CounterCell[] as; CounterCell a; int n; long v;
+			// 如果counterCells不等于空
+            if ((as = counterCells) != null && (n = as.length) > 0) {
+				// h可以理解为当前线程的hashcode，如果对应的counterCells数组下标位置元素当前是空的
+            	// 那么则应该在该位置去生成一个CounterCell对象
+                if ((a = as[(n - 1) & h]) == null) {
+					// counterCells如果空闲
+				    /**
+ 					 * Spinlock (locked via CAS) used when resizing and/or creating CounterCells.
+ 					 */
+    				// private transient volatile int cellsBusy;
                     if (cellsBusy == 0) {            // Try to attach new Cell
+                       // 生成CounterCell对象
                         CounterCell r = new CounterCell(x); // Optimistic create
+                        // 再次判断counterCells如果空闲，并且cas成功修改cellsBusy为1
                         if (cellsBusy == 0 &&
-                            U.compareAndSetInt(this, CELLSBUSY, 0, 1)) {
+                            U.compareAndSwapInt(this, CELLSBUSY, 0, 1)) {
                             boolean created = false;
                             try {               // Recheck under lock
                                 CounterCell[] rs; int m, j;
+								// 如果counterCells对象没有发生变化，那么就将刚刚创建的CounterCell赋值到数组中 并标记created          (CounterCell创建成功的标志位) 为 true 退出循环
                                 if ((rs = counterCells) != null &&
                                     (m = rs.length) > 0 &&
                                     rs[j = (m - 1) & h] == null) {
@@ -2607,39 +2669,61 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                             } finally {
                                 cellsBusy = 0;
                             }
+							// 如果CounterCell创建成功，则退出循环，方法执行结束
                             if (created)
                                 break;
+							 // 如果没有创建成功，则继续循环
                             continue;           // Slot is now non-empty
                         }
                     }
                     collide = false;
                 }
+				// 如果调用当前方法之前cas失败了，那么先将wasUncontended设置为true，第一次进这个方法为false 
                 else if (!wasUncontended)       // CAS already known to fail
                     wasUncontended = true;      // Continue after rehash
-                else if (U.compareAndSetLong(c, CELLVALUE, v = c.value, v + x))
+                // 通过cas修改CELLVALUE的值，修改成功则退出循环
+                else if (U.compareAndSwapLong(a, CELLVALUE, v = a.value, v + x))
                     break;
-                else if (counterCells != cs || n >= NCPU)
+				// counterCells发生了改变，或者当前counterCells数组的大小大于等于CPU核心数，设置collide为false，
+            	// 如果到了这个极限，counterCells不会再进行扩容了
+                else if (counterCells != as || n >= NCPU)
                     collide = false;            // At max size or stale
+                // 扩容条件
                 else if (!collide)
                     collide = true;
+				// 当collide为true进入这个分支，表示发生了碰撞会进行扩容
                 else if (cellsBusy == 0 &&
-                         U.compareAndSetInt(this, CELLSBUSY, 0, 1)) {
+                         U.compareAndSwapInt(this, CELLSBUSY, 0, 1)) {
                     try {
-                        if (counterCells == cs) // Expand table unless stale
-                            counterCells = Arrays.copyOf(cs, n << 1);
+						// 对counterCells进行扩容      << 1 二倍扩容
+                        if (counterCells == as) {// Expand table unless stale
+                            CounterCell[] rs = new CounterCell[n << 1];
+                            for (int i = 0; i < n; ++i)
+                                rs[i] = as[i];
+                            counterCells = rs;
+                        }
                     } finally {
                         cellsBusy = 0;
                     }
                     collide = false;
                     continue;                   // Retry with expanded table
                 }
+				// 重新进行hash
                 h = ThreadLocalRandom.advanceProbe(h);
             }
-            else if (cellsBusy == 0 && counterCells == cs &&
-                     U.compareAndSetInt(this, CELLSBUSY, 0, 1)) {
+			// 如果counterCells等于空的情况下会走下面两个分支
+        
+	        // cellsBusy == 0表示counterCells没有线程在用
+	        // 如果counterCells空闲，并且当前线程所获得counterCells对象没有发生变化
+	        // 先通过CAS将cellsBusy标记改为1，如果修改成功则证明可以操作counterCells了，
+	        // 其他线程暂时不能使用counterCells
+            else if (cellsBusy == 0 && counterCells == as &&
+                     U.compareAndSwapInt(this, CELLSBUSY, 0, 1)) {
                 boolean init = false;
                 try {                           // Initialize table
-                    if (counterCells == cs) {
+               		// cellsBusy标记改成后就初始化CounterCell[]
+                    if (counterCells == as) {
+						// 初始化长度为2
                         CounterCell[] rs = new CounterCell[2];
                         rs[h & 1] = new CounterCell(x);
                         counterCells = rs;
@@ -2648,10 +2732,14 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                 } finally {
                     cellsBusy = 0;
                 }
+				// 如果没有初始化成功，则证明counterCells发生了变化，当前线程修改cellsBusy的过程中，
+	            // 可能其他线程已经把counterCells对象替换掉了
+	            // 如果初始化成功，则退出循环，方法执行结束
                 if (init)
                     break;
             }
-            else if (U.compareAndSetLong(this, BASECOUNT, v = baseCount, v + x))
+			//如果都不满足 最后还是cas当前map对象 baseCount + x
+            else if (U.compareAndSwapLong(this, BASECOUNT, v = baseCount, v + x))
                 break;                          // Fall back on using base
         }
     }
@@ -2663,7 +2751,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
      * too small, in which case resizes instead.
      */
     private final void treeifyBin(Node<K,V>[] tab, int index) {
-        Node<K,V> b; int n;
+        Node<K,V> b; int n, sc;
         if (tab != null) {
             if ((n = tab.length) < MIN_TREEIFY_CAPACITY)
                 tryPresize(n << 1);
@@ -2689,12 +2777,12 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
     }
 
     /**
-     * Returns a list of non-TreeNodes replacing those in given list.
+     * Returns a list on non-TreeNodes replacing those in given list.
      */
     static <K,V> Node<K,V> untreeify(Node<K,V> b) {
         Node<K,V> hd = null, tl = null;
         for (Node<K,V> q = b; q != null; q = q.next) {
-            Node<K,V> p = new Node<K,V>(q.hash, q.key, q.val);
+            Node<K,V> p = new Node<K,V>(q.hash, q.key, q.val, null);
             if (tl == null)
                 hd = p;
             else
@@ -2707,7 +2795,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
     /* ---------------- TreeNodes -------------- */
 
     /**
-     * Nodes for use in TreeBins.
+     * Nodes for use in TreeBins
      */
     static final class TreeNode<K,V> extends Node<K,V> {
         TreeNode<K,V> parent;  // red-black tree links
@@ -2733,7 +2821,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
         final TreeNode<K,V> findTreeNode(int h, Object k, Class<?> kc) {
             if (k != null) {
                 TreeNode<K,V> p = this;
-                do {
+                do  {
                     int ph, dir; K pk; TreeNode<K,V> q;
                     TreeNode<K,V> pl = p.left, pr = p.right;
                     if ((ph = p.hash) > h)
@@ -2800,7 +2888,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
          * Creates bin with initial set of nodes headed by b.
          */
         TreeBin(TreeNode<K,V> b) {
-            super(TREEBIN, null, null);
+            super(TREEBIN, null, null, null);
             this.first = b;
             TreeNode<K,V> r = null;
             for (TreeNode<K,V> x = b, next; x != null; x = next) {
@@ -2826,7 +2914,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                                   (kc = comparableClassFor(k)) == null) ||
                                  (dir = compareComparables(kc, k, pk)) == 0)
                             dir = tieBreakOrder(k, pk);
-                        TreeNode<K,V> xp = p;
+                            TreeNode<K,V> xp = p;
                         if ((p = (dir <= 0) ? p.left : p.right) == null) {
                             x.parent = xp;
                             if (dir <= 0)
@@ -2847,7 +2935,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
          * Acquires write lock for tree restructuring.
          */
         private final void lockRoot() {
-            if (!U.compareAndSetInt(this, LOCKSTATE, 0, WRITER))
+            if (!U.compareAndSwapInt(this, LOCKSTATE, 0, WRITER))
                 contendedLock(); // offload to separate method
         }
 
@@ -2865,14 +2953,14 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
             boolean waiting = false;
             for (int s;;) {
                 if (((s = lockState) & ~WAITER) == 0) {
-                    if (U.compareAndSetInt(this, LOCKSTATE, s, WRITER)) {
+                    if (U.compareAndSwapInt(this, LOCKSTATE, s, WRITER)) {
                         if (waiting)
                             waiter = null;
                         return;
                     }
                 }
                 else if ((s & WAITER) == 0) {
-                    if (U.compareAndSetInt(this, LOCKSTATE, s, s | WAITER)) {
+                    if (U.compareAndSwapInt(this, LOCKSTATE, s, s | WAITER)) {
                         waiting = true;
                         waiter = Thread.currentThread();
                     }
@@ -2897,7 +2985,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                             return e;
                         e = e.next;
                     }
-                    else if (U.compareAndSetInt(this, LOCKSTATE, s,
+                    else if (U.compareAndSwapInt(this, LOCKSTATE, s,
                                                  s + READER)) {
                         TreeNode<K,V> r, p;
                         try {
@@ -3179,7 +3267,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
 
         static <K,V> TreeNode<K,V> balanceDeletion(TreeNode<K,V> root,
                                                    TreeNode<K,V> x) {
-            for (TreeNode<K,V> xp, xpl, xpr;;) {
+            for (TreeNode<K,V> xp, xpl, xpr;;)  {
                 if (x == null || x == root)
                     return root;
                 else if ((xp = x.parent) == null) {
@@ -3270,7 +3358,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
         }
 
         /**
-         * Checks invariants recursively for the tree of Nodes rooted at t.
+         * Recursive invariant check
          */
         static <K,V> boolean checkInvariants(TreeNode<K,V> t) {
             TreeNode<K,V> tp = t.parent, tl = t.left, tr = t.right,
@@ -3294,8 +3382,18 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
             return true;
         }
 
-        private static final long LOCKSTATE
-            = U.objectFieldOffset(TreeBin.class, "lockState");
+        private static final sun.misc.Unsafe U;
+        private static final long LOCKSTATE;
+        static {
+            try {
+                U = sun.misc.Unsafe.getUnsafe();
+                Class<?> k = TreeBin.class;
+                LOCKSTATE = U.objectFieldOffset
+                    (k.getDeclaredField("lockState"));
+            } catch (Exception e) {
+                throw new Error(e);
+            }
+        }
     }
 
     /* ----------------Table Traversal -------------- */
@@ -3449,9 +3547,9 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
 
     static final class KeyIterator<K,V> extends BaseIterator<K,V>
         implements Iterator<K>, Enumeration<K> {
-        KeyIterator(Node<K,V>[] tab, int size, int index, int limit,
+        KeyIterator(Node<K,V>[] tab, int index, int size, int limit,
                     ConcurrentHashMap<K,V> map) {
-            super(tab, size, index, limit, map);
+            super(tab, index, size, limit, map);
         }
 
         public final K next() {
@@ -3469,9 +3567,9 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
 
     static final class ValueIterator<K,V> extends BaseIterator<K,V>
         implements Iterator<V>, Enumeration<V> {
-        ValueIterator(Node<K,V>[] tab, int size, int index, int limit,
+        ValueIterator(Node<K,V>[] tab, int index, int size, int limit,
                       ConcurrentHashMap<K,V> map) {
-            super(tab, size, index, limit, map);
+            super(tab, index, size, limit, map);
         }
 
         public final V next() {
@@ -3489,9 +3587,9 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
 
     static final class EntryIterator<K,V> extends BaseIterator<K,V>
         implements Iterator<Map.Entry<K,V>> {
-        EntryIterator(Node<K,V>[] tab, int size, int index, int limit,
+        EntryIterator(Node<K,V>[] tab, int index, int size, int limit,
                       ConcurrentHashMap<K,V> map) {
-            super(tab, size, index, limit, map);
+            super(tab, index, size, limit, map);
         }
 
         public final Map.Entry<K,V> next() {
@@ -3507,7 +3605,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
     }
 
     /**
-     * Exported Entry for EntryIterator.
+     * Exported Entry for EntryIterator
      */
     static final class MapEntry<K,V> implements Map.Entry<K,V> {
         final K key; // non-null
@@ -3521,9 +3619,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
         public K getKey()        { return key; }
         public V getValue()      { return val; }
         public int hashCode()    { return key.hashCode() ^ val.hashCode(); }
-        public String toString() {
-            return Helpers.mapEntryToString(key, val);
-        }
+        public String toString() { return key + "=" + val; }
 
         public boolean equals(Object o) {
             Object k, v; Map.Entry<?,?> e;
@@ -3560,7 +3656,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
             this.est = est;
         }
 
-        public KeySpliterator<K,V> trySplit() {
+        public Spliterator<K> trySplit() {
             int i, f, h;
             return (h = ((i = baseIndex) + (f = baseLimit)) >>> 1) <= i ? null :
                 new KeySpliterator<K,V>(tab, baseSize, baseLimit = h,
@@ -3599,7 +3695,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
             this.est = est;
         }
 
-        public ValueSpliterator<K,V> trySplit() {
+        public Spliterator<V> trySplit() {
             int i, f, h;
             return (h = ((i = baseIndex) + (f = baseLimit)) >>> 1) <= i ? null :
                 new ValueSpliterator<K,V>(tab, baseSize, baseLimit = h,
@@ -3639,7 +3735,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
             this.est = est;
         }
 
-        public EntrySpliterator<K,V> trySplit() {
+        public Spliterator<Map.Entry<K,V>> trySplit() {
             int i, f, h;
             return (h = ((i = baseIndex) + (f = baseLimit)) >>> 1) <= i ? null :
                 new EntrySpliterator<K,V>(tab, baseSize, baseLimit = h,
@@ -4451,19 +4547,19 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
         public abstract boolean contains(Object o);
         public abstract boolean remove(Object o);
 
-        private static final String OOME_MSG = "Required array size too large";
+        private static final String oomeMsg = "Required array size too large";
 
         public final Object[] toArray() {
             long sz = map.mappingCount();
             if (sz > MAX_ARRAY_SIZE)
-                throw new OutOfMemoryError(OOME_MSG);
+                throw new OutOfMemoryError(oomeMsg);
             int n = (int)sz;
             Object[] r = new Object[n];
             int i = 0;
             for (E e : this) {
                 if (i == n) {
                     if (n >= MAX_ARRAY_SIZE)
-                        throw new OutOfMemoryError(OOME_MSG);
+                        throw new OutOfMemoryError(oomeMsg);
                     if (n >= MAX_ARRAY_SIZE - (MAX_ARRAY_SIZE >>> 1) - 1)
                         n = MAX_ARRAY_SIZE;
                     else
@@ -4479,7 +4575,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
         public final <T> T[] toArray(T[] a) {
             long sz = map.mappingCount();
             if (sz > MAX_ARRAY_SIZE)
-                throw new OutOfMemoryError(OOME_MSG);
+                throw new OutOfMemoryError(oomeMsg);
             int m = (int)sz;
             T[] r = (a.length >= m) ? a :
                 (T[])java.lang.reflect.Array
@@ -4489,7 +4585,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
             for (E e : this) {
                 if (i == n) {
                     if (n >= MAX_ARRAY_SIZE)
-                        throw new OutOfMemoryError(OOME_MSG);
+                        throw new OutOfMemoryError(oomeMsg);
                     if (n >= MAX_ARRAY_SIZE - (MAX_ARRAY_SIZE >>> 1) - 1)
                         n = MAX_ARRAY_SIZE;
                     else
@@ -4542,24 +4638,14 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
             return true;
         }
 
-        public boolean removeAll(Collection<?> c) {
+        public final boolean removeAll(Collection<?> c) {
             if (c == null) throw new NullPointerException();
             boolean modified = false;
-            // Use (c instanceof Set) as a hint that lookup in c is as
-            // efficient as this view
-            Node<K,V>[] t;
-            if ((t = map.table) == null) {
-                return false;
-            } else if (c instanceof Set<?> && c.size() > t.length) {
-                for (Iterator<?> it = iterator(); it.hasNext(); ) {
-                    if (c.contains(it.next())) {
-                        it.remove();
-                        modified = true;
-                    }
+            for (Iterator<E> it = iterator(); it.hasNext();) {
+                if (c.contains(it.next())) {
+                    it.remove();
+                    modified = true;
                 }
-            } else {
-                for (Object e : c)
-                    modified |= remove(e);
             }
             return modified;
         }
@@ -4592,7 +4678,6 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
     public static class KeySetView<K,V> extends CollectionView<K,V,K>
         implements Set<K>, java.io.Serializable {
         private static final long serialVersionUID = 7249069246763182397L;
-        @SuppressWarnings("serial") // Conditionally serializable
         private final V value;
         KeySetView(ConcurrentHashMap<K,V> map, V value) {  // non-public
             super(map);
@@ -4747,22 +4832,6 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
             throw new UnsupportedOperationException();
         }
 
-        @Override public boolean removeAll(Collection<?> c) {
-            if (c == null) throw new NullPointerException();
-            boolean modified = false;
-            for (Iterator<V> it = iterator(); it.hasNext();) {
-                if (c.contains(it.next())) {
-                    it.remove();
-                    modified = true;
-                }
-            }
-            return modified;
-        }
-
-        public boolean removeIf(Predicate<? super V> filter) {
-            return map.removeValueIf(filter);
-        }
-
         public Spliterator<V> spliterator() {
             Node<K,V>[] t;
             ConcurrentHashMap<K,V> m = map;
@@ -4830,10 +4899,6 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
                     added = true;
             }
             return added;
-        }
-
-        public boolean removeIf(Predicate<? super Entry<K,V>> filter) {
-            return map.removeEntryIf(filter);
         }
 
         public final int hashCode() {
@@ -4907,7 +4972,7 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
         }
 
         /**
-         * Same as Traverser version.
+         * Same as Traverser version
          */
         final Node<K,V> advance() {
             Node<K,V> e;
@@ -6352,31 +6417,38 @@ public class ConcurrentHashMap<K,V> extends AbstractMap<K,V>
     }
 
     // Unsafe mechanics
-    private static final Unsafe U = Unsafe.getUnsafe();
-    private static final long SIZECTL
-        = U.objectFieldOffset(ConcurrentHashMap.class, "sizeCtl");
-    private static final long TRANSFERINDEX
-        = U.objectFieldOffset(ConcurrentHashMap.class, "transferIndex");
-    private static final long BASECOUNT
-        = U.objectFieldOffset(ConcurrentHashMap.class, "baseCount");
-    private static final long CELLSBUSY
-        = U.objectFieldOffset(ConcurrentHashMap.class, "cellsBusy");
-    private static final long CELLVALUE
-        = U.objectFieldOffset(CounterCell.class, "value");
-    private static final int ABASE = U.arrayBaseOffset(Node[].class);
+    private static final sun.misc.Unsafe U;
+    private static final long SIZECTL;
+    private static final long TRANSFERINDEX;
+    private static final long BASECOUNT;
+    private static final long CELLSBUSY;
+    private static final long CELLVALUE;
+    private static final long ABASE;
     private static final int ASHIFT;
 
     static {
-        int scale = U.arrayIndexScale(Node[].class);
-        if ((scale & (scale - 1)) != 0)
-            throw new ExceptionInInitializerError("array index scale not a power of two");
-        ASHIFT = 31 - Integer.numberOfLeadingZeros(scale);
-
-        // Reduce the risk of rare disastrous classloading in first call to
-        // LockSupport.park: https://bugs.openjdk.java.net/browse/JDK-8074773
-        Class<?> ensureLoaded = LockSupport.class;
-
-        // Eager class load observed to help JIT during startup
-        ensureLoaded = ReservationNode.class;
+        try {
+            U = sun.misc.Unsafe.getUnsafe();
+            Class<?> k = ConcurrentHashMap.class;
+            SIZECTL = U.objectFieldOffset
+                (k.getDeclaredField("sizeCtl"));
+            TRANSFERINDEX = U.objectFieldOffset
+                (k.getDeclaredField("transferIndex"));
+            BASECOUNT = U.objectFieldOffset
+                (k.getDeclaredField("baseCount"));
+            CELLSBUSY = U.objectFieldOffset
+                (k.getDeclaredField("cellsBusy"));
+            Class<?> ck = CounterCell.class;
+            CELLVALUE = U.objectFieldOffset
+                (ck.getDeclaredField("value"));
+            Class<?> ak = Node[].class;
+            ABASE = U.arrayBaseOffset(ak);
+            int scale = U.arrayIndexScale(ak);
+            if ((scale & (scale - 1)) != 0)
+                throw new Error("data type scale not a power of two");
+            ASHIFT = 31 - Integer.numberOfLeadingZeros(scale);
+        } catch (Exception e) {
+            throw new Error(e);
+        }
     }
 }
